1. Implemented Home screen with bottom tabs 2. Implemented history screen 3. Implemented Purchased screen

--- a/app/src/main/res/layout/dialog_app.xml
+++ b/app/src/main/res/layout/dialog_app.xml
@@ -39,7 +39,7 @@
         android:layout_marginLeft="@dimen/margin_30"
         android:layout_marginRight="@dimen/margin_30"
         android:layout_marginTop="@dimen/margin_3"
-        android:text="@string/cancel" />
+        android:text="@string/action_cancel" />
 
 </LinearLayout>
 
