1. Added api for fetching data

--- a/app/src/main/res/layout/custom_tab.xml
+++ b/app/src/main/res/layout/custom_tab.xml
@@ -5,7 +5,6 @@
 
         <TextView
             android:id="@+id/tab_tv"
-            style="@style/style_tab_text"
-            fontPath="fonts/Raleway-Medium.ttf" />
+            style="@style/style_tab_text" />
     </RelativeLayout>
 </layout>
