--- a/app/src/main/res/drawable-v21/bg_change3.xml
+++ b/app/src/main/res/drawable-v21/bg_change3.xml
@@ -3,11 +3,11 @@
     android:padding="10dp"
     android:shape="rectangle" >
 
-    <solid android:color="#ffffff" />
+    <solid android:color="#5ea1df" />
 
     <stroke
         android:width="5dp"
-        android:color="#4f535d" />
+        android:color="#5ea1df" />
     <padding
         android:bottom="5dp"
         android:left="5dp"
