--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,21 +1,17 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
-    <data>
-
-    </data>
-
 
     <RelativeLayout
         style="@style/BothMatch"
-        android:background="@color/white">
+        android:background="@android:color/white">
 
         <!-- View Pager -->
         <com.incon.connect.custom.view.NonSwipeableViewPager
             android:id="@+id/viewpager_register"
             style="@style/BothMatch"
             android:layout_above="@+id/include_register_bottom_buttons"
-            android:background="@color/white" />
+            android:background="@android:color/white" />
 
         <!-- layout for bottom buttons -->
         <include
@@ -23,7 +19,7 @@
             layout="@layout/view_registration_bottom_buttons"
             android:layout_width="match_parent"
             android:layout_height="47.7dp"
-            android:layout_alignParentBottom="true" />
+            android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
 
