1. Removed raleway font 2. UI for user registration

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -103,7 +103,7 @@
         <Button
             android:id="@+id/button_login"
             style="@style/MatchWrap"
-            fontPath="fonts/Raleway-Bold.ttf"
+            fontPath="fonts/OpenSans-Bold.ttf"
             android:layout_alignEnd="@id/relative_change_password"
             android:layout_alignStart="@id/relative_change_password"
             android:layout_below="@id/relative_change_password"
