--- a/app/src/main/res/layout/activity_reset_password_prompt.xml
+++ b/app/src/main/res/layout/activity_reset_password_prompt.xml
@@ -24,7 +24,6 @@
 
         <TextView
             android:id="@+id/text_reset_password"
-            fontPath="fonts/Raleway-Medium.ttf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -38,7 +37,7 @@
 
         <Button
             android:id="@+id/button_ok"
-            fontPath="fonts/Raleway-Bold.ttf"
+            fontPath="fonts/OpenSans-Bold.ttf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_reset_password"
