--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -8,4 +8,5 @@
     <integer name="character_limit_200">200</integer>
     <integer name="character_limit_500">500</integer>
     <integer name="character_limit_600">600</integer>
+    <integer name="phone_number_length">10</integer>
 </resources>
