--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -4,7 +4,8 @@
     <item
         android:id="@+id/action_history"
         android:icon="@drawable/ic_tab_history"
-        android:title="@string/title_history" />
+        android:title="@string/title_history"
+        />
 
     <item
         android:id="@+id/action_buy_requests_favorites"
