--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,6 +25,7 @@
     <dimen name="margin_19">19dp</dimen>
     <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_22">22dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
     <dimen name="margin_25">25dp</dimen>
     <dimen name="margin_27">27dp</dimen>
     <dimen name="margin_30">30dp</dimen>
