--- a/app/src/main/res/layout/fragment_registration_user.xml
+++ b/app/src/main/res/layout/fragment_registration_user.xml
@@ -134,12 +134,22 @@
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/edittext_register_dob"
                         style="@style/Register_TextInputEditText"
-                        fontPath="fonts/Raleway-Regular.ttf"
                         android:enabled="false"
-                        android:onClick="@{() -> userFragment.onDobClick()}"
                         android:tag="3"
                         android:text="@={register.userInfo.dateOfBirthToShow}"/>
                 </com.incon.connect.custom.view.CustomTextInputLayout>
+
+
+                <View
+                    android:id="@+id/view_dob"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_alignBottom="@+id/input_layout_register_dob"
+                    android:layout_alignEnd="@+id/input_layout_register_dob"
+                    android:layout_alignStart="@+id/input_layout_register_dob"
+                    android:layout_alignTop="@+id/input_layout_register_dob"
+                    android:background="@null"
+                    android:onClick="@{() -> userFragment.onDobClick()}"/>
 
                 <!-- Email ID -->
                 <com.incon.connect.custom.view.CustomTextInputLayout
